# alexacart

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
alexacart/: app.py  config.py  db.py  models.py  nodriver_patch.py
alexacart/alexa/: auth.py  client.py
alexacart/instacart/: agent.py  auth.py  client.py
alexacart/matching/: matcher.py
alexacart/routes/: order.py  preferences.py  settings.py
alexacart/static/: app.js  style.css
alexacart/templates/: base.html  history.html  index.html  preferences.html  review.html  settings.html
alexacart/templates/partials/: active_sessions.html  commit_results.html  preference_item.html  product_picker.html  review_row.html
cookie_refresh/: package.json  refresh.js
scripts/: AlexaCart.icns  build_macos_app.sh  generate_icon.py  install-launchagent.sh  restart-launchagent.sh  uninstall-launchagent.sh
